--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -8,6 +8,20 @@
 }
 
 
+/* Container to control the iframe size and scaling */
+.iframe-container {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+
+  /* Iframe styles */
+  iframe {
+    width: 100%;
+    border: solid 2px blue;
+  }
+
+
 /* Custom styling for Prompt Admonition */
 .admonition.prompt {
     background-color: #f4f8ff; /* Light blue background */
